--- a/client/src/components/dog/dog.module.css
+++ b/client/src/components/dog/dog.module.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
     display: flex;
     flex-direction: column;
     color: black;
@@ -15,6 +15,27 @@
     margin-right: auto;
     width: 40%;
     float: right;
+} */
+
+
+
+.card {
+    display: grid;
+    grid-template-rows: max-content 200px 1fr;
+    align-items: center;
+    background-color: #ffffff3f;
+    border: 1px solid rgb(26, 26, 26);
+    border-radius: 20px;
+    margin: auto;
+}
+
+.card img {
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    object-fit: cover;
+    width: 90%;
+    height: 90%;
 }
 
 .card h4 {
