--- a/client/src/components/dogDetail/dogDetail.module.css
+++ b/client/src/components/dogDetail/dogDetail.module.css
@@ -1,20 +1,21 @@
+
 .card {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    background-color: #2497d185;
-    width: 600px;
-    height: 250px;
-    border: 3px solid rgb(26, 26, 26);
+    display: grid;
+    grid-template-rows: max-content 200px 1fr;
+    align-items: center;
+    background-color: #ffffff3f;
+    border: 1px solid rgb(26, 26, 26);
     border-radius: 20px;
+    margin: auto;
 }
 
 .card img {
-    display: flex;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
-    float: right;
+    border-radius: 20px;
+    object-fit: cover;
+    width: 90%;
+    height: 90%;
 }
 
 .card h4 {
