--- a/client/src/components/pagination/pagination.module.css
+++ b/client/src/components/pagination/pagination.module.css
@@ -4,7 +4,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: aquamarine;
+    background-color: transparent;
+    background: transparent;
     margin: 10px;
     height: 50px;
 
