--- a/client/src/components/search/search.module.css
+++ b/client/src/components/search/search.module.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: aquamarine;
-    margin: 10px;
-    height: 50px;
+    background-color: transparent;
+    margin: 5px;
+    height: 30px;
 }
 
 .searchBar {
