--- a/client/src/components/landingPage/landingPage.module.css
+++ b/client/src/components/landingPage/landingPage.module.css
@@ -1,6 +1,7 @@
 
 .landingPage {
     display: flex;
+    align-items: center;
     justify-content: center;
     background-image: url("./huellas-dog.jpg");
     background-repeat: repeat;
@@ -9,7 +10,12 @@
     align-self: center;
 }
 
-.btn {
+h1 {
+    font-size: 3rem;
+    text-shadow: 7px 4px 5px blue;
+}
+
+/* .btn {
     color: #b80303;
     border-color: #a7a7a7;
     background-color: #ffffff;
@@ -25,4 +31,53 @@
     border-color: white;
     background-color: #a2a5c5;
     color: white;
+} */
+
+
+
+
+/* CSS */
+.btn {
+  background-color: #3DD1E7;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 100%;
+  max-width: 460px;
+  position: relative;
+  cursor: pointer;
+  transform: rotate(-2deg);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+.btn:hover:after {
+  bottom: 2px;
+  left: 2px;
 }
