--- a/client/src/components/addDog/addDog.module.css
+++ b/client/src/components/addDog/addDog.module.css
@@ -1,3 +1,21 @@
+.body {
+  
+  background-image: url("./addDog1.jpg");
+  height: 100vh;
+  margin:0;
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  height: 80px;
+  width: 100%;
+  justify-content: center;
+  align-content: center;;
+}
+
 .danger {
     color: red;
     font-size: 10px;
@@ -5,4 +23,49 @@
   
 .danger input {
     border: 2px solid red;
-  }
+}
+
+.btn {
+  background-color: #3DD1E7;
+  border: 0 solid #E5E7EB;
+  box-sizing:content-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  align-items: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  position: absolute;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 100%;
+  max-width: 460px;
+  cursor: pointer;
+  transform: rotate(-2deg);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+.btn:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
